--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rp-pico = "0.4.0"
+rp-pico = "0.5.0"
 embedded-hal ="0.2.5"
-panic-halt = "0.2.0"
 cortex-m = "0.7.2"
 cortex-m-rt = "0.7"
 usb-device= "0.2.9"
 usbd-serial = "0.1.1"
+fugit = "0.3.6"
+nb="1.0.0"
