--- a/guest-lib/Cargo.toml
+++ b/guest-lib/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "guest"
+name = "guest-lib"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-panic-halt = "0.2.0"
-guest-lib={path="../guest-lib"}
