--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -14,6 +14,7 @@ usb-device= "0.2.9"
 usbd-serial = "0.1.1"
 fugit = "0.3.6"
 nb="1.0.0"
+guest-lib={path="../guest-lib"}
 
 [build-dependencies]
 goblin="0.5"
